--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "httpx>=0.26.0",
     "apscheduler>=3.10.0",
     "python-multipart>=0.0.6",
+    "bcrypt>=4.0.0",
+    "slowapi>=0.1.9",
 ]
 
 [project.optional-dependencies]
